--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Contacts Form</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+  <link rel=”stylesheet” type=”text/css” href=”/main.css” />
+</head>
+<body >
 <div id='contact-box' class="group">
   <div class="span6 clear">
     <form action="/" method="post" class="well">
@@ -11,3 +21,4 @@
     </form>
   </div>
 </div>
+</body>
