--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,11 +8,12 @@
   <link href="css/main.css" rel="stylesheet">
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="css/bootstrap-responsive.css" rel="stylesheet">
-  <script src="js/bootstrap.js"></script>
+
 </head>
 <body>
 
 <%= yield %>
-
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/bootstrap.js"></script>
 </body>
 </html>
