fixed email validation, added mail settings

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,14 +1,14 @@
 <div class="formWrap">
   <div class="row">
     <div class="col-md-12">
-      <form action="/submitted" method="post" class="well">
+      <form action="/submitted" method="post" enctype="multipart/form-data">
         <div class="form-group">
           <label for="name">Your Name:</label>
-          <input type="text" name="name" class="span4" placeholder="John Smith...">
+          <input type="text" name="name" placeholder="John Smith...">
         </div>
         <div class="form-group">
           <label for="email">Your email address:</label>
-          <input type="text" name="email" class="span4" placeholder="email@example.com">
+          <input type="text" name="email" placeholder="email@example.com">
         </div>
         <div class="form-group">
           <label for="to">Your message:</label>
