--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <div class="formWrap">
   <div class="row">
     <div class="col-md-12">
-      <form action="/submitted" method="post" enctype="multipart/form-data">
+      <form action="/submitted" method="post" id="contacts" enctype="multipart/form-data">
         <div class="form-group">
           <label for="name">Your Name:</label>
           <input type="text" name="name" placeholder="John Smith...">
